# wallet-program

./: .gitignore  LICENSE  README.md
js/: .gitignore  .solitarc.js  index.js  index_add.js  index_delete.js  index_modify.js  index_nonce.js  index_recover.js  index_recover_fail1.js  index_recover_fail2.js  index_recover_success.js  index_transfer_usdc.js  keygen.js  keys.js  package.json
js/.crates/: .crates2.json
js/idl/: krypton.json
program/: Cargo.toml  README.md
program/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
program/src/instruction/: add_recovery_guardian.rs  add_recovery_guardians.rs  add_recovery_sign.rs  initialize_native_sol_transfer_guard.rs  initialize_recovery.rs  initialize_wallet.rs  mod.rs  modify_recovery_threshold.rs  recover_native_sol.rs  recover_token.rs  recover_wallet.rs  remove_recovery_guardians.rs  transfer_native_sol.rs  transfer_token.rs  wrap_instruction.rs
program/src/state/: guard.rs  mod.rs  native_sol_transfer_guard.rs
program/tests/: test.rs
tests/: .ammanrc.js  krypton.ts  package.json
tests/.amman/accounts/: BXPrcDXuxa4G7m5qj4hu9Fs48sAPJqsjK5Y5S8qxH44J.json  PwDiXFxQsGra4sFFTT8r1QWRMd4vfumiWC1jfWNfdYT.json  auth9SigNpDKz4sJJ1DfCTuZrZNSAgh9sFD3rboVmgg.json  eBJLFYPxJmMGKuFwpDWkzxZeUrad92kZRC5BJLpzyT9.json
